@@ -172,6 +172,7 @@ private:
 	SallyAPI::GUI::CThreadStarter*			m_pThreadPlay;
 	std::map<std::string, CCoverLoader*>	m_mCoverLoaders;
 
+	void			OnCommandRemoveCurrentTrack();
 	void			UpdateLanguageSubtitle();
 	void			DropdownChanged(SallyAPI::GUI::CGUIBaseObject* reporter);
 	void			CorrectSmartImageText();
