@@ -125,6 +125,7 @@
 #define GUI_APP_CLEAR_TEXT_SEARCH			GUI_APP_PLUGIN_ID + 108
 #define GUI_APP_TIMER_SEND_FACEBOOK			GUI_APP_PLUGIN_ID + 109
 #define GUI_APP_PLAYER_END_REACHED			GUI_APP_PLUGIN_ID + 110
+#define GUI_APP_DELETE_CURRENT_TRACK		GUI_APP_PLUGIN_ID + 111
 
 #define GUI_APP_CONFIG_CHANGE_PATH			GUI_APP_PLUGIN_ID + 120
 #define GUI_APP_CONFIG_CHANGE_DB_UPDATE		GUI_APP_PLUGIN_ID + 121
